[package]
name = "holysee"
version = "0.0.1"
authors = ["Bigo <bigo@crisidev.org>, Uovobw <uovobw@gmail.com"]

[dependencies]
config = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.3"
pretty_env_logger = "0.1"
irc = "0.12"
tokio-core = "0.1"
futures = "0.1"
rand = "0.3"
regex = "0.2"
chan = "0.1"
chrono = "0.3"

telegram-bot = { version = "0.5", path = "../vendor/telegram-bot-edge/lib" }
clippy = {version = "*", optional = true}

[features]
default = []
